8040793: vmTestbase/nsk/monitoring/stress/lowmem fails on calling isCollectionUsageThresholdExceeded()

Backport-of: 0025764ec02bef391720962272b7219d34c00653